objects/DSP_Lead_Update__e.object
<CustomObject>
    <description>This Event is use for update Leads And Opportunity.</description>
    <fields>
        <fullName>AddressLine1_TXT__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;address&gt;&lt;street line=1&gt;

concatenate this Address Line 1 with the other line 2-5 into the standard Lead Address field using the \n line break to separate the lines.</description>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine2_TXT__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;address&gt;&lt;street line=2&gt;</description>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine3_TXT__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;address&gt;&lt;street line=3&gt;</description>
        <label>Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressType_TXT__c</fullName>
        <description>picklist (work, home, delivery) --&gt; Created as Text

&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;address&gt; type parameter value</description>
        <label>Address Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApartmentNumber_NUM__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;address&gt;&lt;apartment&gt;</description>
        <label>Apartment Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Date_and_Time__c</fullName>
        <label>Appointment Date and Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Id__c</fullName>
        <label>Appointment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Location__c</fullName>
        <label>Appointment Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Notes__c</fullName>
        <label>Appointment Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_type__c</fullName>
        <label>Appointment type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Style_TXT__c</fullName>
        <description>&lt;vehicle&gt;&lt;bodystyle&gt;</description>
        <label>Body Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnitSubDivision_CD__c</fullName>
        <label>Business Unit SubDivision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Code_CD__c</fullName>
        <description>A-Honda, B-Acura, M-Powersports, P-Power Equipment/Maring/Engine</description>
        <label>Business Unit Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_TXT__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;address&gt;&lt;city&gt;</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_TXT__c</fullName>
        <description>&quot;&lt;vehicle&gt;&lt;Colorcombination&gt;

on the Lead object, break up into key value pairs. &quot;
using the adf xml schema, break up multiple color combinations into a human readable format:
e.g. xml: &lt;colorcombination&gt;&lt;interiorcolor&gt;Blue&lt;/interiorcolor&gt;&lt;exteriorcolor&gt;Black&lt;/exteriorcolor&gt;&lt;preference&gt;1&lt;/preference&gt;&lt;interiorcolor&gt;Red&lt;/interiorcolor&gt;&lt;exteriorcolor&gt;White&lt;/exteriorcolor&gt;&lt;preference&gt;2&lt;/preference&gt;
once converted should read (also add \n linebreak)
1. Blue (interior), Black (exterior)
2. Red (interior), White (exterior)</description>
        <label>Color</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContactMethod_TXT__c</fullName>
        <description>Type is changed to Text from Picklist
If &lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;email preferredcontact=1&gt; then &quot;Email&quot; else</description>
        <label>Contact Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_person__c</fullName>
        <label>Contact person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_TXT__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;address&gt;&lt;country&gt;</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <label>Deal ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Link__c</fullName>
        <label>Deal Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_IDs__c</fullName>
        <description>&lt;vendor&gt;&lt;id&gt; (xml with multiple)</description>
        <label>Dealer IDs</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount__c</fullName>
        <label>Deposit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Confirmation_Number__c</fullName>
        <label>Deposit Confirmation Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_DESC__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_TXT__c</fullName>
        <description>Type changed to Text
&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;email&gt;</description>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exterior_Color__c</fullName>
        <label>Exterior Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName_NM__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interior_Color__c</fullName>
        <label>Interior Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_This_Lead_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is This Lead Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastName_NM__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Provider_Name__c</fullName>
        <label>Lead Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSRP_AMT__c</fullName>
        <label>MSRP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make_TXT__c</fullName>
        <description>&lt;vehicle&gt;&lt;make&gt;</description>
        <label>Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleName_NM__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_TXT__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;phone type=cellphone&gt;</description>
        <label>Mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Name_NM__c</fullName>
        <label>Model Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_TXT__c</fullName>
        <description>&lt;vehicle&gt;&lt;model&gt;</description>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Trim_TXT__c</fullName>
        <description>&lt;vehicle&gt;&lt;trim&gt;</description>
        <label>Model Trim</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_NM__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Odometer_Status_TXT__c</fullName>
        <description>picklist (unknown, rolledover, replaced, original) --&gt; created as Text

&lt;vehicle&gt;&lt;odometer status&gt;</description>
        <label>Odometer Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Odometer_TXT__c</fullName>
        <description>&lt;vehicle&gt;&lt;odometer&gt;</description>
        <label>Odometer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Odometer_Units_TXT__c</fullName>
        <description>picklist (km, mi) --&gt; Created as Text

&lt;vehicle&gt;&lt;odometer units&gt;</description>
        <label>Odometer Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherLeadProvider_TXT__c</fullName>
        <label>Other Lead Provider</label>
        <length>32678</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone_TXT__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;phone type=phone&gt;</description>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProviderContactDetails_TXT__c</fullName>
        <label>Provider Contact Detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProviderDetails_TXT__c</fullName>
        <label>Provider Detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_IDs__c</fullName>
        <label>Provider IDs</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Service__c</fullName>
        <label>Provider Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Tool__c</fullName>
        <label>Provider Tool</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Order_Number__c</fullName>
        <label>Salesforce Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Unique_ID__c</fullName>
        <label>Source Unique ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_TXT__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;address&gt;&lt;regioncode&gt;</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Number_NUM__c</fullName>
        <description>&lt;vehicle&gt;&lt;stock&gt;</description>
        <label>Stock Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transmission_TXT__c</fullName>
        <description>&lt;vehicle&gt;&lt;transmission&gt;</description>
        <label>Transmission</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_IDs__c</fullName>
        <description>&lt;vehicle&gt;&lt;id&gt; (xml with multiple)

1. store this field in the Lead.Vehicle IDs field
2. see adf xml document for ID xml structure. Extract the value on the &lt;id source=&quot;Motorcycle&quot; sequence=&quot;1&quot;&gt;, e.g. &quot;CMX1100LM&quot; and store in Lead.Model ID for eCRM validation
3. Get the source parameter from id tag &lt;id source, e.g. &quot;Motorcycle&quot; and store it in the Business Unit SubDivision lead field</description>
        <label>Vehicle IDs</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vehicle_Interest_TXT__c</fullName>
        <description>Picklist (buy, lease, sell, trade-in, test-drive)

&lt;vehicle Interest&gt;</description>
        <label>Vehicle Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Status_TX__c</fullName>
        <description>picklist (new, used, cpo)

&lt;vehicle status&gt;</description>
        <label>Vehicle Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact_Email__c</fullName>
        <label>Vendor Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact_Name__c</fullName>
        <label>Vendor Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vin_Number_NUM__c</fullName>
        <description>&lt;vehicle&gt;&lt;vin&gt;</description>
        <label>Vin Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_YR__c</fullName>
        <description>&lt;vehicle&gt;&lt;year&gt;</description>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZipCode_TXT__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;address&gt;&lt;postalcode</description>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DSP Lead Update</label>
    <pluralLabel>DSP Lead Updates</pluralLabel>
</CustomObject>